2005-04-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/Class.java:
	(newInstance): Returns an instance of T instead of Object.
	(isEnum()): Now calls VMClass for a proper implementation.
	(isSynthetic()): New method implemented.
	(isAnnotation()): New method implemented.
	* vm/reference/java/lang/VMClass.java:
	(isEnum()): New native method.
	(isSynthetic()): New native method.
	(isAnnotation()): New native method.
	* vm/reference/java/lang/reflect/Constructor.java:
	(newInstance(Object...)): Changed input parameter to a vararg.

2005-04-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/System.java:
	(getenv()): Use Collections.unmodifiableMap to wrap an
	EnvironmentMap.
	(EnvironmentCollection): Reduced to just String check changes.
	(EnvironmentSet): Likewise.
	(EnvironmentMap): Likewise.
	(EnvironmentIterator): Removed.
	
2005-04-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/StringBuilder.java:
	Change references to System.arraycopy to
	VMSystem.arraycopy.

2005-04-01  Tom Tromey  <tromey@redhat.com>

	* java/lang/AssertionError.java: Typo fix.

2005-04-01  Michael Koch  <konqueror@gmx.de>

	* java/io/PipedInputStream.java
	(read): Make sure a positive byte value is returned. Revised javadoc.
	Thanks to Olafur Bragason for reporting these bugs.

2005-04-01  Guilhem Lavaux  <guilhem@kaffe.org>

	* java/awt/image/IndexColorModel.java
	(getRGB): Check if pixel is negative.

2005-03-31  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* javax/swing/text/JTextComponent.java (viewToModel): New method.

2005-03-31  Audrius Meskauskas  <audriusa@bluewin.ch>
	* org/omg/CORBA/ORBPackage/InconsistentTypeCode.java,
	org/omg/CORBA/ORBPackage/InvalidName.java,
	org/omg/CORBA/ORBPackage/package.html: New files.

2005-03-31  Michael Koch  <konqueror@gmx.de>

	* gnu/java/awt/peer/gtk/GdkGraphics.java
	(getClipBounds): Handle clip being null.
	(setClip): Likewise.
	* java/beans/beancontext/BeanContextSupport.java