@@ -1,3 +1,15 @@
+2005-04-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/util/PriorityQueue.java:
+	(PriorityQueue(Collection<? extends E>)): Added explicit cast
+	for comparators.
+	(PriorityQueue(PriorityQueue<? extends E>)): Likewise.
+	(PriorityQueue(SortedSet<? extends E>)): Likewise.
+	* java/util/TreeSet.java:
+	(TreeSet(SortedSet<? extends T>)): Likewise.
+	
+        Reported by: Ewout Prangsma <ewout@prangsma.net>
+	
 2005-04-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/lang/Class.java:
